# Nitz

client/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
client/src/: middleware.ts
client/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
client/src/app/(user)/: layout.tsx
client/src/app/403/: page.tsx
client/src/app/admin/: AdminPanel.tsx  layout.tsx  page.tsx
client/src/app/auth/: googleAuth.ts
client/src/app/components/: About.tsx  Cta.tsx  FAQ.tsx  Features.tsx  Footer.tsx  Hero.tsx  HeroCards.tsx  HowItWorks.tsx  Navbar.tsx  Pricing.tsx  Services.tsx  Sponsors.tsx  Team.tsx  Testimonials.tsx  mode-toggle.tsx
client/src/app/contest/: page.tsx
client/src/app/discuss/: page.tsx
client/src/app/groups/: page.tsx
client/src/app/help/: page.tsx
client/src/app/leaderboard/: page.tsx
client/src/app/login/: LoginForm.tsx  page.tsx
client/src/app/mod-signup/: SignupForm.tsx  page.tsx
client/src/app/moderator/: layout.tsx  page.tsx
client/src/app/nav/: Nav.tsx
client/src/constants/: index.ts
client/src/icons/: GoogleIconSVG.tsx
client/src/utils/: utils.ts
client/supabase/: config.toml
client/supabase/migrations/: 20250331125041_initial.sql.sql  20250401071708_mod.sql.sql  20250416064125_mod.sql.sql
server/js/: .gitignore  app.js  package.json  server.js  test.py
server/rust/: Cargo.toml
server/rust/.cargo/: config.toml
server/rust/src/: main.rs
server/rust/src/api/: mod.rs
server/rust/src/api/moderator/: mod.rs  problem.rs
server/rust/src/db/: database.rs
server/rust/src/models/: problem.rs
(+102 files in other folders)
