[package]
name = "server-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.9.0"
cargo-watch = "8.5.3"
chrono = "0.4.40"
dotenv = "0.15"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["postgres", "uuid", "runtime-tokio", "time"] }
sqlx-postgres = "0.8.3"
uuid = { version = "1.3", features = ["serde"] }
